--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.3s">
-				<img src="images/sponsor-img1.jpg" class="img-responsive" alt="sponsors">
+				<img src="images/sponsor_tradebot.jpg" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.6s">
-				<img src="images/sponsor-img2.jpg" class="img-responsive" alt="sponsors">
+				<img src="images/sponsor_centene.jpg" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
