--- a/index.html
+++ b/index.html
@@ -400,11 +400,11 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
-				<img src="images/sponsor-img3.jpg" class="img-responsive" alt="sponsors">
+				<img src="images/sponsor_techdomains.png" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
-				<img src="images/sponsor-img4.jpg" class="img-responsive" alt="sponsors">
+				<img src="images/sponsor_mixmax.png" class="img-responsive" alt="sponsors">
 			</div>
 
 		</div>
