--- a/index.html
+++ b/index.html
@@ -392,19 +392,19 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.3s">
-				<img src="images/sponsor_tradebot.jpg" height="100" class="img-responsive" alt="sponsors">
+				<img src="images/logo_centene.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.6s">
-				<img src="images/sponsor_centene.jpg" height="100" class="img-responsive" alt="sponsors">
+				<img src="images/logo_mixmax.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
-				<img src="images/sponsor_techdomains.png" height="100" class="img-responsive" alt="sponsors">
+				<img src="images/logo_tradebot.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
-				<img src="images/sponsor_mixmax.png" height="100" class="img-responsive" alt="sponsors">
+				<img src="images/logo_techdomain.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
 		</div>
