--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
-				<img src="images/logo_techdomain.svg" height="100" class="img-responsive" alt="sponsors">
+				<img src="images/logo_techdomains.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
 		</div>
