--- a/index_withtransitions.html
+++ b/index_withtransitions.html
@@ -77,8 +77,8 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h1>FLEX YOUR BRAIN</h1>
-				<h4>March 1 - 3, 2019 · Missouri S&T</h3>
+				<h1 class="wow fadeInUp" data-wow-delay="0.9s">FLEX YOUR BRAIN</h1>
+				<h4 class="wow fadeInUp" data-wow-delay="1.6s">March 1 - 3, 2019 · Missouri S&T</h3>
 				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">LEARN MORE</a>
 				<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER FOR THE EMAIL LIST</a>
 			</div>
@@ -96,13 +96,13 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-6 col-sm-6">
+			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
 				<h3>Welcome to the best 48 hours of your life.</h3>
 				<p>PickHacks is the only student-run hackathon held at Missouri S&T.</p>
 				<p>Quisque facilisis scelerisque venenatis. Nam vulputate ultricies luctus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
 			</div>
 
-			<div class="col-md-6 col-sm-6">
+			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
 				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
 			</div>
 
@@ -171,7 +171,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-12 col-sm-12">
+			<div class="col-md-12 col-sm-12 wow bounceIn">
 				<div class="section-title">
 					<h2>MEET THE TEAM</h2>
 					<p>We're excited to bring you the best hackathon yet.</p>
@@ -290,14 +290,14 @@
 
 			<!-- Section title
 			================================================== -->
-			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
+			<div class="wow bounceIn col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 				<div class="section-title">
 					<h2>FAQ</h2>
 					<p>Your questions. Our answers.</p>
 				</div>
 			</div>
 
-			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
+			<div class="wow fadeInUp col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10" data-wow-delay="0.9s">
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
   					<div class="panel panel-default">
@@ -384,26 +384,26 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-12 col-sm-12">
+			<div class="wow bounceIn col-md-12 col-sm-12">
 				<div class="section-title">
 					<h2>2019 SPONSORS</h2>
 					<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
 				</div>
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.3s">
+			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.3s">
 				<img src="images/logo_centene.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.6s">
+			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.6s">
 				<img src="images/logo_mixmax.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
+			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
 				<img src="images/logo_tradebot.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
+			<div class="wow fadeInUp col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
 				<img src="images/logo_techdomains.svg" height="100" class="img-responsive" alt="sponsors">
 			</div>
 
@@ -458,7 +458,7 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p>Made with love by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">SIG: IDEA</a>
+				<p class="wow fadeInUp" data-wow-delay="0.6s">Made with love by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">SIG: IDEA</a>
 
 
 
