--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>PickHacks 2019</title>
-<meta name="description" content="">
-<meta name="author" content="">
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/animate.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/owl.theme.css">
-<link rel="stylesheet" href="css/owl.carousel.css">
+		<!-- Meta Information -->
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-<!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
+		<!-- for Google -->
+    <meta name="description"
+          content="PickHacks is a 36 hour opportunity for you to build your dreams."/>
+    <meta name="keywords" content="PickHacks, hackathon, Missouri S&T, S&T, Rolla, MLH"/>
+    <meta name="author" content="PickHacks"/>
+    <meta name="theme-color" content="#22292c">
+    <meta name="copyright" content="PickHacks"/>
+    <meta name="application-name" content="PickHacks | March 1st - 3rd | Rolla, MO"/>
+
+		<title>PickHacks 2019</title>
+
+		<!-- Bootstrap Core CSS -->
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+
+		<!-- Animations -->
+		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/owl.theme.css">
+		<link rel="stylesheet" href="css/owl.carousel.css">
+
+		<!-- Main css -->
+		<link rel="stylesheet" href="css/style.css">
 
 <!-- Google Font -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
@@ -72,15 +88,19 @@
 <!-- =========================
     INTRO SECTION
 ============================== -->
+
 <section id="intro" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h1>FLEX YOUR BRAIN</h1>
-				<h4>March 1 - 3, 2019 · Missouri S&T</h3>
-				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">LEARN MORE</a>
-				<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTER FOR THE EMAIL LIST</a>
+				<h1>PICKHACKS</h1>
+				<h3>Flex your brain.</h3>
+				<h4>March 1 - 3, 2019 </h4>
+				<h4>Havener Center</h4>
+				<h4>Missouri S&T</h4>
+				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">SIGN UP FOR UPDATES</a>
+				<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>
 			</div>
 
 
@@ -97,9 +117,10 @@
 		<div class="row">
 
 			<div class="col-md-6 col-sm-6">
-				<h3>Welcome to the best 48 hours of your life.</h3>
-				<p>PickHacks is the only student-run hackathon held at Missouri S&T.</p>
-				<p>Quisque facilisis scelerisque venenatis. Nam vulputate ultricies luctus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+				<h3>What is PickHacks?</h3>
+				<p>PickHacks is a place for exploration. You will have 48 hours to delve into your curiosities, learn something new, and make something awesome.
+					With world-class mentors and 200+ fellow hackers, you're in for an amazing time. Whether you’re a seasoned hacker or completely new to the world of hacking,
+					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire! </p>
 			</div>
 
 			<div class="col-md-6 col-sm-6">
@@ -109,59 +130,6 @@
 		</div>
 	</div>
 </section>
-
-
-<!-- =========================
-    DETAIL SECTION
-==============================
-<section id="detail" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInLeft col-md-4 col-sm-4" data-wow-delay="0.3s">
-				<i class="fa fa-group"></i>
-				<h3>650 Participants</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
-			</div>
-
-			<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
-				<i class="fa fa-clock-o"></i>
-				<h3>24 Programs</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
-			</div>
-
-			<div class="wow fadeInRight col-md-4 col-sm-4" data-wow-delay="0.9s">
-				<i class="fa fa-microphone"></i>
-				<h3>11 Speakers</h3>
-				<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
-			</div>
-
-		</div>
-	</div>
-</section> -->
-
-
-<!-- =========================
-    VIDEO SECTION
-==============================
-<section id="video" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInUp col-md-6 col-sm-10" data-wow-delay="1.3s">
-				<h2>Watch Video</h2>
-				<h3>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet consectetuer diam nonummy.</p>
-			</div>
-			<div class="wow fadeInUp col-md-6 col-sm-10" data-wow-delay="1.6s">
-				<div class="embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XDPwXQjAlB0" allowfullscreen></iframe>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section> -->
 
 
 <!-- =========================
@@ -248,39 +216,6 @@
 	</div>
 </section>
 
-
-<!-- =========================
-   REGISTER SECTION
-==============================
-<section id="register" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="0.6s">
-				<h2>Register Here</h2>
-				<h3>Nunc eu nibh vel augue mollis tincidunt id efficitur tortor. Sed pulvinar est sit amet tellus iaculis hendrerit.</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet consectetuer diam nonummy.</p>
-			</div>
-
-			<div class="wow fadeInUp col-md-5 col-sm-5" data-wow-delay="1s">
-				<form action="#" method="post">
-					<input name="firstname" type="text" class="form-control" id="firstname" placeholder="First Name">
-					<input name="lastname" type="text" class="form-control" id="lastname" placeholder="Last Name">
-					<input name="phone" type="telephone" class="form-control" id="phone" placeholder="Phone Number">
-					<input name="email" type="email" class="form-control" id="email" placeholder="Email Address">
-					<div class="col-md-offset-6 col-md-6 col-sm-offset-1 col-sm-10">
-						<input name="submit" type="submit" class="form-control" id="submit" value="REGISTER">
-					</div>
-				</form>
-			</div>
-
-			<div class="col-md-1"></div>
-
-		</div>
-	</div>
-</section>  -->
-
-
 <!-- =========================
     FAQ SECTION
 ============================== -->
@@ -357,27 +292,6 @@
 
 
 <!-- =========================
-    VENUE SECTION
-==============================
-<section id="venue" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInLeft col-md-offset-1 col-md-5 col-sm-8" data-wow-delay="0.9s">
-				<h2>Venue</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-				<h4>New Event</h4>
-  				<h4>120 Market Street, Suite 110</h4>
-  				<h4>San Francisco, CA 10110</h4>
-				<h4>Tel: 010-020-0120</h4>
-			</div>
-
-		</div>
-	</div>
-</section> -->
-
-
-<!-- =========================
     SPONSORS SECTION
 ============================== -->
 <section id="sponsors" class="parallax-section">
@@ -410,45 +324,6 @@
 		</div>
 	</div>
 </section>
-
-
-<!-- =========================
-    CONTACT SECTION
-==============================
-<section id="contact" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInUp col-md-offset-1 col-md-5 col-sm-6" data-wow-delay="0.6s">
-				<div class="contact_des">
-					<h3>New Event</h3>
-					<p>Proin sodales convallis urna eu condimentum. Morbi tincidunt augue eros, vitae pretium mi condimentum eget. Suspendisse eu turpis sed elit pretium congue.</p>
-					<p>Mauris at tincidunt felis, vitae aliquam magna. Sed aliquam fringilla vestibulum. Praesent ullamcorper mauris fermentum turpis scelerisque rutrum eget eget turpis.</p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat. Lorem ipsum dolor.</p>
-					<a href="#" class="btn btn-danger">DOWNLOAD NOW</a>
-				</div>
-			</div>
-
-			<div class="wow fadeInUp col-md-5 col-sm-6" data-wow-delay="0.9s">
-				<div class="contact_detail">
-					<div class="section-title">
-						<h2>Keep in touch</h2>
-					</div>
-					<form action="#" method="post">
-						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
-					  	<input name="email" type="email" class="form-control" id="email" placeholder="Email">
-					  	<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
-						<div class="col-md-6 col-sm-10">
-							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
-						</div>
-					</form>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>  -->
-
 
 <!-- =========================
     FOOTER SECTION
@@ -491,6 +366,8 @@
 <script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/app.js"></script>
+<script src="js/particles.js"></script>
 
 </body>
 </html>
