--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 
+		<!-- PICKHACKS 2019 TEAM -->
+		<!-- We're looking for staff! Please inquire by emailing msthackathon@mst.edu -->
+		<link rel="author" href="people.txt" />
+
 		<!-- Meta Information -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -131,91 +135,6 @@
 	</div>
 </section>
 
-
-<!-- =========================
-    SPEAKERS SECTION
-============================== -->
-<section id="speakers" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-			<div class="col-md-12 col-sm-12">
-				<div class="section-title">
-					<h2>MEET THE TEAM</h2>
-					<p>We're excited to bring you the best hackathon yet.</p>
-				</div>
-			</div>
-
-			<!-- Testimonial Owl Carousel section
-			================================================== -->
-			<div id="owl-speakers" class="owl-carousel">
-
-				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
-					<div class="speakers-wrapper">
-						<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
-								<h3>Luis Ocampo</h3>
-								<h6>Co-Director</h6>
-								<h6>Information Science & Technology </h6>
-								<h6>Class of 2021</h6>
-							</div>
-					</div>
-				</div>
-
-				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-					<div class="speakers-wrapper">
-						<img src="images/speakers-img2.jpg" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
-								<h3>Christopher Gu</h3>
-								<h6>Co-Director</h6>
-								<h6>Computer Science</h6>
-								<h6>Class of 2020</h6>
-							</div>
-					</div>
-				</div>
-
-				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
-					<div class="speakers-wrapper">
-						<img src="images/speakers-img3.jpg" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
-								<h3>Chau Le</h3>
-								<h6>Organizer</h6>
-								<h6>Computer Science</h6>
-								<h6>Class of 2020</h6>
-							</div>
-					</div>
-				</div>
-
-				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-					<div class="speakers-wrapper">
-						<img src="images/speakers-img4.jpg" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
-								<h3>Jose Alega</h3>
-								<h6>Organizer</h6>
-								<h6>Computer Science</h6>
-								<h6>Class of 2021</h6>
-							</div>
-					</div>
-				</div>
-
-				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-					<div class="speakers-wrapper">
-						<img src="images/speakers-img5.jpg" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
-								<h3>Allison Chan</h3>
-								<h6>Organizer</h6>
-								<h6>Computer Science</h6>
-								<h6>Class of 2021</h6>
-							</div>
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-	</div>
-</section>
-
 <!-- =========================
     FAQ SECTION
 ============================== -->
@@ -239,14 +158,13 @@
    						<div class="panel-heading" role="tab" id="headingOne">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          							 A hackathon? I don't know how to code!
+          							 Who can attend?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       						<div class="panel-body">
-        						<p>No worries -- you won't be breaking into any businesses with us.</p>
-										<p>We'll show you the ropes; all you need is a desire to learn!</p>
+        						<p>All undergraduate, graduate, and high school students from any school are welcome. If you are under 18, we’ll need a parental consent form.</p>
       						</div>
    						 </div>
  					</div>
@@ -255,14 +173,13 @@
    						<div class="panel-heading" role="tab" id="headingTwo">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          							What are latest UX Developments?
+          							I don’t have a team. Can I still participate?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       						<div class="panel-body">
-                            	<p>Nunc eu nibh vel augue mollis tincidunt id efficitur tortor. Sed pulvinar est sit amet tellus iaculis hendrerit. Mauris justo erat, rhoncus in arcu at, scelerisque tempor erat.</p>
-        						<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa. Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>
+                            	<p>Of course! It is absolutely not necessary to have a team prior to coming. We’ll have some fun team-forming sessions at the beginning where you can find an awesome group of people to work with. You’re welcome to have up to four people on a team.</p>
       						</div>
    						 </div>
  					</div>
@@ -271,14 +188,13 @@
    						<div class="panel-heading" role="tab" id="headingThree">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          							What things about Social Media will be discussed?
+          							What should I bring?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
       						<div class="panel-body">
-                            	<p>Aenean vulputate finibus justo et feugiat. Ut turpis lacus, dapibus quis justo id, porttitor tempor justo. Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa.</p>
-        						<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa. Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>
+                            	<p>Your valid student ID, laptop, phone, chargers, any sleeping equipment you might want (we'll be providing air mattresses), and lots of excitement!</p>
       						</div>
    						 </div>
  					 </div>
@@ -288,7 +204,91 @@
 
 		</div>
 	</div>
+	<!-- =========================
+	    SPEAKERS SECTION
+	============================== -->
+	<section id="speakers" class="parallax-section">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-md-12 col-sm-12">
+					<div class="section-title">
+						<h2>MEET THE TEAM</h2>
+						<p>We're excited to bring you the best hackathon yet.</p>
+					</div>
+				</div>
+
+				<!-- Testimonial Owl Carousel section
+				================================================== -->
+				<div id="owl-speakers" class="owl-carousel">
+
+					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+						<div class="speakers-wrapper">
+							<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
+								<div class="speakers-thumb">
+									<h3>Luis Ocampo</h3>
+									<h6>Co-Director</h6>
+									<h6>Information Science & Technology </h6>
+									<h6>Class of 2021</h6>
+								</div>
+						</div>
+					</div>
+
+					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+						<div class="speakers-wrapper">
+							<img src="images/speakers-img2.jpg" class="img-responsive" alt="speakers">
+								<div class="speakers-thumb">
+									<h3>Christopher Gu</h3>
+									<h6>Co-Director</h6>
+									<h6>Computer Science</h6>
+									<h6>Class of 2020</h6>
+								</div>
+						</div>
+					</div>
+
+					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+						<div class="speakers-wrapper">
+							<img src="images/speakers-img3.jpg" class="img-responsive" alt="speakers">
+								<div class="speakers-thumb">
+									<h3>Chau Le</h3>
+									<h6>Organizer</h6>
+									<h6>Computer Science</h6>
+									<h6>Class of 2020</h6>
+								</div>
+						</div>
+					</div>
+
+					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+						<div class="speakers-wrapper">
+							<img src="images/speakers-img4.jpg" class="img-responsive" alt="speakers">
+								<div class="speakers-thumb">
+									<h3>Jose Alega</h3>
+									<h6>Organizer</h6>
+									<h6>Computer Science</h6>
+									<h6>Class of 2021</h6>
+								</div>
+						</div>
+					</div>
+
+					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+						<div class="speakers-wrapper">
+							<img src="images/speakers-img5.jpg" class="img-responsive" alt="speakers">
+								<div class="speakers-thumb">
+									<h3>Allison Chan</h3>
+									<h6>Organizer</h6>
+									<h6>Computer Science</h6>
+									<h6>Class of 2021</h6>
+								</div>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</section>
 </section>
+
 
 
 <!-- =========================
