--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
 			================================================== -->
 			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 				<div class="section-title">
-					<h2>FAQ</h2>
-					<p>Your questions. Our answers.</p>
+					<h2 style="color:white">FAQ</h2>
 				</div>
 			</div>
 
@@ -213,8 +212,7 @@
 
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
-						<h2>MEET THE TEAM</h2>
-						<p>We're excited to bring you the best hackathon yet.</p>
+						<h2 style="color:white">MEET THE TEAM</h2>
 					</div>
 				</div>
 
