--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
 
 			<div class="col-md-12 col-sm-12">
 				<h1>PICKHACKS</h1>
-				<h3>Flex your brain.</h3>
 				<h4>March 1 - 3, 2019 </h4>
 				<h4>Havener Center</h4>
 				<h4>Missouri S&T</h4>
 				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">SIGN UP FOR UPDATES</a>
-				<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>
+				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
 
@@ -220,7 +219,7 @@
 				================================================== -->
 				<div id="owl-speakers" class="owl-carousel">
 
-					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+					<div class="col-md-3 col-sm-3">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -232,7 +231,7 @@
 						</div>
 					</div>
 
-					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+					<div class="col-md-3 col-sm-3">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img2.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -244,7 +243,7 @@
 						</div>
 					</div>
 
-					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
+					<div class="col-md-3 col-sm-3">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img3.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -256,7 +255,7 @@
 						</div>
 					</div>
 
-					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+					<div class="col-md-3 col-sm-3">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img4.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -268,7 +267,7 @@
 						</div>
 					</div>
 
-					<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+					<div class="col-md-3 col-sm-3">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img5.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -299,6 +298,7 @@
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
 					<h2>2019 SPONSORS</h2>
+					<h3>Interested in sponsoring? Drop us a line at <a href="mailto:msthackathon@mst.edu">msthackathon@mst.edu!</a></h4>
 					<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
 				</div>
 			</div>
@@ -331,16 +331,15 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p>Made with love by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">SIG: IDEA</a>
+				<p>Made with love in Rolla, MO</p>
 
 
 
 				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1.6s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeInUp" data-wow-delay="1.9s"></a></li>
-					<li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="2s"></a></li>
+					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
+					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
+					<li><a href="https://www.instagram.com/mstpickhacks/" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.6s"></a></li>
+					<li><a href="mailto:msthackathon@mst.edu" class="fa fa-envelope wow fadeInUp" data-wow-delay="1.9s"></a></li>
 				</ul>
 
 			</div>
