--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">PICKHACKS</a>
+			<a href="#intro" class="navbar-brand">PICKHACKS</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#intro" class="smoothScroll">Intro</a></li>
-				<li><a href="#overview" class="smoothScroll">Overview</a></li>
-				<li><a href="#intro" class="smoothScroll">FAQ</a></li>
+				<li><a href="#intro" class="smoothscroll">Intro</a></li>
+				<li><a href="#overview" class="smoothscroll">Overview</a></li>
+				<li><a href="#faq" class="smoothscroll">FAQ + TEAM</a></li>
 				<!--<li><a href="#speakers" class="smoothScroll">Speakers</a></li>-->
 				<!--<li><a href="#program" class="smoothScroll">Programs</a></li>-->
 				<!--<li><a href="#register" class="smoothScroll">Register</a></li>-->
 				<!--<li><a href="#venue" class="smoothScroll">Venue</a></li>-->
-				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
+				<li><a href="#sponsors" class="smoothscroll">Sponsors</a></li>
 				<!--<li><a href="#contact" class="smoothScroll">Contact</a></li>-->
 			</ul>
 
@@ -102,7 +102,7 @@
 				<h4>March 1 - 3, 2019 </h4>
 				<h4>Havener Center</h4>
 				<h4>Missouri S&T</h4>
-				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">SIGN UP FOR UPDATES</a>
+				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="1s">SIGN UP FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -145,7 +145,7 @@
 			================================================== -->
 			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 				<div class="section-title">
-					<h2 style="color:white">FAQ</h2>
+					<h2 style="color:white">Your questions, answered.</h2>
 				</div>
 			</div>
 
@@ -211,7 +211,7 @@
 
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
-						<h2 style="color:white">MEET THE TEAM</h2>
+						<h2 style="color:white">Get to know us!</h2>
 					</div>
 				</div>
 
@@ -303,21 +303,57 @@
 				</div>
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.3s">
-				<img src="images/logo_centene.svg" height="100" class="img-responsive" alt="sponsors">
-			</div>
+			<!-- Platinum Sponsors-->
+			<br />
+            <div class="row">
+							<div class="col-sm-4">
+								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
+							</div>
+               <div class="col-sm-4">
+                  <img src="images/logo_centene.svg" class="img-responsive" alt="" />
+               </div>
+							 <div class="col-sm-4">
+                  <img src="images/placeholder.svg" class="img-responsive" alt="" />
+               </div>
+            </div>
+            <!-- Gold Sponsors-->
+			<br />
+            <div class="row">
+							<div class="col-sm-3">
+								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
+							</div>
+               <div class="col-sm-3">
+                  <img src="images/logo_mixmax.svg" class="img-responsive" alt="" />
+               </div>
+               <div class="col-sm-3">
+                  <img src="images/logo_tradebot.svg" class="img-responsive" alt="" />
+               </div>
+							 <div class="col-sm-3">
+                  <img src="images/placeholder.svg" class="img-responsive" alt="" />
+               </div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.6s">
-				<img src="images/logo_mixmax.svg" height="100" class="img-responsive" alt="sponsors">
-			</div>
+            </div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="0.9s">
-				<img src="images/logo_tradebot.svg" height="100" class="img-responsive" alt="sponsors">
-			</div>
+              <br />
+            <!-- Bronze Sponsors-->
+             <div class="row">
+               <div class="col-sm-offset-1 col-sm-2">
+                  <img src="images/placeholder.svg" class="img-responsive" alt="" />
+               </div>
+               <div class="col-sm-2">
+                  <img src="images/logo_jetbrains.svg" class="img-responsive" alt="" />
+               </div>
+               <div class="col-sm-2">
+                  <img src="images/logo_techdomains.svg" class="img-responsive" alt="" />
+               </div>
+               <div class="col-sm-2">
+                  <img src="images/logo_balsamiq.svg" class="img-responsive" alt="" />
+               </div>
+               <div class="col-sm-2">
+                  <img src="images/placeholder.svg" class="img-responsive" alt="" />
+               </div>
 
-			<div class="col-md-3 col-sm-6 col-xs-6" data-wow-delay="1s">
-				<img src="images/logo_techdomains.svg" height="100" class="img-responsive" alt="sponsors">
-			</div>
+            </div>
 
 		</div>
 	</div>
@@ -360,11 +396,9 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.parallax.js"></script>
 <script src="js/owl.carousel.min.js"></script>
-<script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
-<script src="js/app.js"></script>
-<script src="js/particles.js"></script>
+<script src="js/smoothscroll.js"></script>
 
 </body>
 </html>
