Changed email to pickhacks@mst.edu and linked Havener center to maps.

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 		<div class="collapse navbar-collapse">
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#intro" class="smoothscroll">Intro</a></li>
-				<li><a href="#overview" class="smoothscroll">Overview</a></li>
-				<li><a href="#faq" class="smoothscroll">FAQ + TEAM</a></li>
+				<li><a href="#intro" class="smoothScroll">Intro</a></li>
+				<li><a href="#overview" class="smoothScroll">Overview</a></li>
+				<li><a href="#faq" class="smoothScroll">FAQ + TEAM</a></li>
 				<!--<li><a href="#speakers" class="smoothScroll">Speakers</a></li>-->
 				<!--<li><a href="#program" class="smoothScroll">Programs</a></li>-->
 				<!--<li><a href="#register" class="smoothScroll">Register</a></li>-->
 				<!--<li><a href="#venue" class="smoothScroll">Venue</a></li>-->
-				<li><a href="#sponsors" class="smoothscroll">Sponsors</a></li>
+				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
 				<!--<li><a href="#contact" class="smoothScroll">Contact</a></li>-->
 			</ul>
 
@@ -100,7 +100,7 @@
 			<div class="col-md-12 col-sm-12">
 				<h1>PICKHACKS</h1>
 				<h4>March 1 - 3, 2019 </h4>
-				<h4>Havener Center</h4>
+				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2">Havener Center</a></h4>
 				<h4>Missouri S&T</h4>
 				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="1s">SIGN UP FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
@@ -298,7 +298,7 @@
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
 					<h2>2019 SPONSORS</h2>
-					<h3>Interested in sponsoring? Drop us a line at <a href="mailto:msthackathon@mst.edu">msthackathon@mst.edu!</a></h4>
+					<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 					<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
 				</div>
 			</div>
@@ -375,7 +375,7 @@
 					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
 					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
 					<li><a href="https://www.instagram.com/mstpickhacks/" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.6s"></a></li>
-					<li><a href="mailto:msthackathon@mst.edu" class="fa fa-envelope wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="mailto:pickhacks@mst.edu" class="fa fa-envelope wow fadeInUp" data-wow-delay="1.9s"></a></li>
 				</ul>
 
 			</div>
