Added smoothScroll to pickhacks logo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#intro" class="navbar-brand">PICKHACKS</a>
+			<a href="#intro" class="navbar-brand smoothScroll">PICKHACKS</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
