--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h1>PICKHACKS</h1>
-				<h4>March 1 - 3, 2019 </h4>
-				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
-				<h4>Missouri S&T</h4>
-				<div class="timer"></div>
-				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">SIGN UP FOR UPDATES</a>
+				<h1 class="wow fadeInUp" data-wow-delay="0.6s">PICKHACKS</h1>
+				<h4 class="wow fadeInUp" data-wow-delay="1.1s">March 1 - 3, 2019 </h4>
+				<h4 class="wow fadeInUp" data-wow-delay="1.1s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
+				<h4 class="wow fadeInUp" data-wow-delay="1.1s">Missouri S&T</h4>
+				<div class="timer wow fadeInUp" data-wow-delay="1.6s"></div>
+				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.1s">SIGN UP FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -120,14 +120,14 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-6 col-sm-6">
+			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.4s">
 				<h3>What is PickHacks?</h3>
 				<p>PickHacks is a place for exploration. You will have 48 hours to delve into your curiosities, learn something new, and make something awesome.
 					With world-class mentors and 200+ fellow hackers, you're in for an amazing time. Whether you’re a seasoned hacker or completely new to the world of hacking,
 					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire! </p>
 			</div>
 
-			<div class="col-md-6 col-sm-6">
+			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
 				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
 			</div>
 
@@ -144,13 +144,13 @@
 
 			<!-- Section title
 			================================================== -->
-			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
+			<div class="wow bounceIn col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 				<div class="section-title">
 					<h2 style="color:white">Your questions, answered.</h2>
 				</div>
 			</div>
 
-			<div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
+			<div class="wow fadeInUp col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10" data-wow-delay="0.5s">
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
   					<div class="panel panel-default">
@@ -255,7 +255,7 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-md-12 col-sm-12">
+				<div class="col-md-12 col-sm-12 wow bounceIn">
 					<div class="section-title">
 						<h2 style="color:white">Get to know us!</h2>
 					</div>
@@ -265,7 +265,7 @@
 				================================================== -->
 				<div id="owl-speakers" class="owl-carousel">
 
-					<div class="col-md-3 col-sm-3">
+					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -277,7 +277,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-3">
+					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img2.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -289,7 +289,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-3">
+					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img3.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -301,7 +301,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-3">
+					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img4.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -313,7 +313,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-3">
+					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/speakers-img5.jpg" class="img-responsive" alt="speakers">
 								<div class="speakers-thumb">
@@ -341,7 +341,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-12 col-sm-12">
+			<div class="wow bounceIn col-md-12 col-sm-12">
 				<div class="section-title">
 					<h2>2019 SPONSORS</h2>
 					<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
@@ -351,7 +351,7 @@
 
 			<!-- Platinum Sponsors-->
 			<br />
-            <div class="row">
+            <div class="wow fadeInUp row" data-wow-delay="0.3s">
 							<div class="col-sm-4">
 								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
 							</div>
@@ -364,7 +364,7 @@
             </div>
             <!-- Gold Sponsors-->
 			<br />
-            <div class="row">
+            <div class="wow fadeInUp row" data-wow-delay="0.6s">
 							<div class="col-sm-3">
 								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
 							</div>
@@ -382,7 +382,7 @@
 
               <br />
             <!-- Bronze Sponsors-->
-             <div class="row">
+             <div class="wow fadeInUp row" data-wow-delay="0.9s">
                <div class="col-sm-offset-1 col-sm-2">
                   <img src="images/placeholder.svg" class="img-responsive" alt="" />
                </div>
@@ -413,7 +413,7 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p>Made with love in Rolla, MO</p>
+				<p class="wow fadeInUp" data-wow-delay="0.6s">Made with love in Rolla, MO</p>
 
 
 
