--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#intro" class="smoothScroll">Intro</a></li>
 				<li><a href="#overview" class="smoothScroll">Overview</a></li>
-				<li><a href="#faq" class="smoothScroll">FAQ + TEAM</a></li>
-				<!--<li><a href="#speakers" class="smoothScroll">Speakers</a></li>-->
-				<!--<li><a href="#program" class="smoothScroll">Programs</a></li>-->
+				<li><a href="#faq" class="smoothScroll">FAQ</a></li>
+				<li><a href="#program" class="smoothScroll">Schedule</a></li>
+				<li><a href="#speakers" class="smoothScroll">Team</a></li>
 				<!--<li><a href="#register" class="smoothScroll">Register</a></li>-->
 				<!--<li><a href="#venue" class="smoothScroll">Venue</a></li>-->
 				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
@@ -248,91 +248,292 @@
 
 		</div>
 	</div>
-	<!-- =========================
-	    SPEAKERS SECTION
-	============================== -->
-	<section id="speakers" class="parallax-section">
-		<div class="container">
-			<div class="row">
+</section>
 
-				<div class="col-md-12 col-sm-12 wow bounceIn">
-					<div class="section-title">
-						<h2 style="color:white">Get to know us!</h2>
-					</div>
+<!--=========================
+    PROGRAM SECTION
+==============================-->
+<section id="program" class="parallax-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.6s">
+				<div class="section-title">
+					<h2>Our Programs</h2>
+					<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
 				</div>
-
-				<!-- Testimonial Owl Carousel section
-				================================================== -->
-				<div id="owl-speakers" class="owl-carousel">
-
-					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-						<div class="speakers-wrapper">
-							<img src="images/speakers-img1.jpg" class="img-responsive" alt="speakers">
-								<div class="speakers-thumb">
-									<h3>Luis Ocampo</h3>
-									<h6>Co-Director</h6>
-									<h6>Information Science & Technology </h6>
-									<h6>Class of 2021</h6>
-								</div>
-						</div>
-					</div>
-
-					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-						<div class="speakers-wrapper">
-							<img src="images/speakers-img2.jpg" class="img-responsive" alt="speakers">
-								<div class="speakers-thumb">
-									<h3>Christopher Gu</h3>
-									<h6>Co-Director</h6>
-									<h6>Computer Science</h6>
-									<h6>Class of 2020</h6>
-								</div>
-						</div>
-					</div>
-
-					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-						<div class="speakers-wrapper">
-							<img src="images/speakers-img3.jpg" class="img-responsive" alt="speakers">
-								<div class="speakers-thumb">
-									<h3>Chau Le</h3>
-									<h6>Organizer</h6>
-									<h6>Computer Science</h6>
-									<h6>Class of 2020</h6>
-								</div>
-						</div>
-					</div>
-
-					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-						<div class="speakers-wrapper">
-							<img src="images/speakers-img4.jpg" class="img-responsive" alt="speakers">
-								<div class="speakers-thumb">
-									<h3>Jose Alega</h3>
-									<h6>Organizer</h6>
-									<h6>Computer Science</h6>
-									<h6>Class of 2021</h6>
-								</div>
-						</div>
-					</div>
-
-					<div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
-						<div class="speakers-wrapper">
-							<img src="images/speakers-img5.jpg" class="img-responsive" alt="speakers">
-								<div class="speakers-thumb">
-									<h3>Allison Chan</h3>
-									<h6>Organizer</h6>
-									<h6>Computer Science</h6>
-									<h6>Class of 2021</h6>
-								</div>
-						</div>
-					</div>
-
-				</div>
-
 			</div>
+
+			<div class="wow fadeInUp col-md-10 col-sm-10" data-wow-delay="0.9s">
+				<!-- Nav tabs -->
+				<ul class="nav nav-tabs" role="tablist">
+					<li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">FIRST DAY</a></li>
+					<li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">SECOND DAY</a></li>
+					<li><a href="#tday" aria-controls="tday" role="tab" data-toggle="tab">THIRD DAY</a></li>
+				</ul>
+				<!-- tab panes -->
+				<div class="tab-content">
+
+					<div role="tabpanel" class="tab-pane active" id="fday">
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img1.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 09.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room 240</span>
+							</h6>
+							<h3>Introduction to Design</h3>
+							<h4>By Jenny Green</h4>
+							<p>Maecenas accumsan metus turpis, eu faucibus ligula interdum in. Mauris at tincidunt felis, vitae aliquam magna. Sed aliquam fringilla vestibulum.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img2.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 10.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room 360</span>
+							</h6>
+							<h3>Front-End Development</h3>
+							<h4>By Johnathan Mark</h4>
+							<p>Mauris at tincidunt felis, vitae aliquam magna. Sed aliquam fringilla vestibulum. Praesent ullamcorper mauris fermentum turpis scelerisque rutrum eget eget turpis.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img3.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 11.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room 450</span>
+							</h6>
+							<h3>Social Media Marketing</h3>
+							<h4>By Johnathan Doe</h4>
+							<p>Nam pulvinar, elit vitae rhoncus pretium, massa urna bibendum ex, aliquam efficitur lorem odio vitae erat. Integer rutrum viverra magna, nec ultrices risus rutrum nec.</p>
+						</div>
+					</div>
+
+					<div role="tabpanel" class="tab-pane" id="sday">
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img4.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 11.00 AM</span>
+								<span><i class="fa fa-map-marker"></i> Room 240</span>
+							</h6>
+							<h3>Backend Development</h3>
+							<h4>By Matt Lee</h4>
+							<p>Integer rutrum viverra magna, nec ultrices risus rutrum nec. Pellentesque interdum vel nisi nec tincidunt. Quisque facilisis scelerisque venenatis. Nam vulputate ultricies luctus.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img5.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 01.00 PM</span>
+								<span><i class="fa fa-map-marker"></i> Room 450</span>
+							</h6>
+							<h3>Web Application Lite</h3>
+							<h4>By David Orlando</h4>
+							<p>Aliquam faucibus lobortis dolor, id pellentesque eros pretium in. Aenean in erat ut quam aliquet commodo. Vivamus aliquam pulvinar ipsum ut sollicitudin. Suspendisse quis sollicitudin mauris.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img6.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 03.00 PM</span>
+								<span><i class="fa fa-map-marker"></i> Room 650</span>
+							</h6>
+							<h3>Professional UX Design</h3>
+							<h4>By James Lee Mark</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+						</div>
+					</div>
+
+					<div role="tabpanel" class="tab-pane" id="tday">
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img7.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 03.00 PM</span>
+								<span><i class="fa fa-map-marker"></i> Room 750</span>
+							</h6>
+							<h3>Online Shopping Business</h3>
+							<h4>By Michael Walker</h4>
+							<p>Aliquam faucibus lobortis dolor, id pellentesque eros pretium in. Aenean in erat ut quam aliquet commodo. Vivamus aliquam pulvinar ipsum ut sollicitudin. Suspendisse quis sollicitudin mauris.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img8.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 05.00 PM</span>
+								<span><i class="fa fa-map-marker"></i> Room 850</span>
+							</h6>
+							<h3>Introduction to Mobile App</h3>
+							<h4>By Cherry Stella</h4>
+							<p>Nunc eu nibh vel augue mollis tincidunt id efficitur tortor. Sed pulvinar est sit amet tellus iaculis hendrerit. Mauris justo erat, rhoncus in arcu at, scelerisque tempor erat.</p>
+						</div>
+
+						<!-- program divider -->
+						<div class="program-divider col-md-12 col-sm-12"></div>
+
+						<!-- program speaker here -->
+						<div class="col-md-2 col-sm-2">
+							<img src="images/program-img9.jpg" class="img-responsive" alt="program">
+						</div>
+						<div class="col-md-10 col-sm-10">
+							<h6>
+								<span><i class="fa fa-clock-o"></i> 07.00 PM</span>
+								<span><i class="fa fa-map-marker"></i> Room 750</span>
+							</h6>
+							<h3>Bootstrap UI Design</h3>
+							<h4>By John David</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+						</div>
+					</div>
+
+				</div>
+
 		</div>
-	</section>
+	</div>
 </section>
 
 
+
+<!-- =========================
+		SPEAKERS SECTION
+============================== -->
+<section id="speakers" class="parallax-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-12 col-sm-12 wow bounceIn">
+				<div class="section-title">
+					<h2 style="color:white">Get to know us!</h2>
+				</div>
+			</div>
+
+			<!-- Testimonial Owl Carousel section
+			================================================== -->
+			<div class="row">
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Luis Ocampo</h3>
+								<h6>Co-Director</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Christopher Gu</h3>
+								<h6>Co-Director</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Allison Chan</h3>
+								<h6>Organizer</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Jose Alega</h3>
+								<h6>Organizer</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Alan Troung</h3>
+								<h6>Position</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>LanChau LeTran</h3>
+								<h6>Position</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Dylan Burr</h3>
+								<h6>Web Designer</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
+								<h3>Nicole Goetz</h3>
+								<h6>Position</h6>
+							</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+</section>
 
 <!-- =========================
     SPONSORS SECTION
