Changed sizes of sponsors, added new ones, and fixed timer timing date

--- a/index.html
+++ b/index.html
@@ -641,14 +641,14 @@
 			<br />
 			<br />
             <div class="wow fadeInUp row" data-wow-delay="0.3s">
-							<div class="col-sm-2">
+							<div class="col-sm-1">
 								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
 							</div>
                <div class="col-sm-5">
                   <img src="images/logo_centene.svg" class="img-responsive" alt="" />
                </div>
 							 <div class="col-sm-5">
-                  <img src="images/panera-logo.png" class="img-responsive" alt="" />
+                  <img src="images/panera-logo.jpg" class="img-responsive" alt="" />
                </div>
             </div>
             <!-- Gold Sponsors-->
@@ -678,7 +678,7 @@
                   <img src="images/ecorp_blk_pc.jpg" class="img-responsive" alt="" />
                </div>
                <div class="col-sm-3">
-                  <img src="images/logo_edwardjones_white.jpg" class="img-responsive" alt="" />
+                  <img src="images/logo_edwardjones.png" class="img-responsive" alt="" />
                </div>
                <div class="col-sm-3">
                   <img src="images/mastercard-logo.png" class="img-responsive" alt="" />
@@ -759,7 +759,7 @@
 <script src="js/timeCounter.js"></script>
 
 <script type="text/javascript">
-  var Time = "3/01/2019 00:00:00";
+  var Time = "3/01/2019 15:00:00";
   setInterval(function() { countDown(".timer", Time) }, 1000);
 </script>
 
