Added links to all current pictures

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="https://www.linkedin.com/in/luismocampo/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/luis_ocampo.jpg" class="img-responsive img-circle" alt="speakers">
@@ -553,7 +553,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="https://www.linkedin.com/in/dylan-burr-0842a414b/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/dylan_burr.jpg" class="img-responsive img-circle" alt="speakers">
@@ -565,7 +565,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="https://www.linkedin.com/in/nicolegoetz/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/nicole_goetz.jpg" class="img-responsive img-circle" alt="speakers">
@@ -580,7 +580,7 @@
 			</div>
 
 			<div class="row">
-				<a href="#">
+				<a href="https://www.linkedin.com/in/allison-n-chan/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/allison_chan.jpg" class="img-responsive img-circle" alt="speakers">
@@ -592,7 +592,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="https://www.linkedin.com/in/jmalega/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/jose_alega.jpg" class="img-responsive img-circle" alt="speakers">
@@ -604,7 +604,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="https://www.linkedin.com/in/alan-truong-b5411814b/">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/alan_truong.jpg" class="img-responsive img-circle" alt="speakers">
