Removed slider from overview section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
 		<title>PickHacks 2019</title>
 
-		<!--Image Slider-->
-		<link rel="stylesheet" href="css/slider.css" />
-
 		<!-- Materialize for Tables -->
 		<link rel="stylesheet" href="css/materialize.css" />
 
@@ -126,7 +123,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInUp col-lg-6 col-md-5 col-sm-12 text-center" style="margin-bottom: 4rem" data-wow-delay="0.4s">
+			<div class="wow fadeInUp col-sm-12 text-center" style="margin-bottom: 4rem" data-wow-delay="0.4s">
 				<div class="section-title">
 					<h2>Flex Your Brain!</h2>
 				</div>
@@ -134,83 +131,23 @@
 					With world-class mentors and 200+ fellow hackers, you're in for an amazing time. Whether you’re a seasoned hacker or completely new to the world of hacking,
 					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire!
 				</p>
-				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+				<div class="wow fadeInUp col-md-offset-3 col-md-2 col-sm-3 col-xs-4 info-offset" data-wow-delay="0.6s">
 					<div class="info" style="margin-right: 30%; background-color: #036084;">
 						<h2>1<br /> Venue</h2>
 					</div>
 				</div>
 
-				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+				<div class="wow fadeInUp col-md-2 col-sm-3 col-xs-4" data-wow-delay="0.6s">
 					<div class="info" style="margin-left: 15%; margin-right: 15%; background-color: #fed132;">
 						<h2>36<br /> Hours</h2>
 					</div>
 				</div>
 
-				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+				<div class="wow fadeInUp col-md-2 col-sm-3 col-xs-4" data-wow-delay="0.6s">
 					<div class="info" style="margin-left: 30%; background-color: #78BE20">
 						<h2>250+<br /> Hackers</h2>
 					</div>
 				</div>
-			</div>
-
-			<div class="wow fadeInUp col-lg-6 col-md-7 col-sm-12 text-center slide-container" data-wow-delay="0.4s">
-				<div id="slider-wrap">
-	      	  <ul id="slider">
-	          	 <li data-color="#1abc9c">
-	                <div>
-	                    <h3>Slide #1</h3>
-	                    <span>Sub-title #1</span>
-	                </div>
-	                <i class="fa fa-image"></i>
-	             </li>
-
-	             <li data-color="#3498db">
-	                <div>
-	                    <h3>Slide #2</h3>
-	                    <span>Sub-title #2</span>
-	                </div>
-	                <i class="fa fa-gears"></i>
-	             </li>
-
-	             <li data-color="#9b59b6">
-	                <div>
-	                    <h3>Slide #3</h3>
-	                    <span>Sub-title #3</span>
-	                </div>
-	                <i class="fa fa-sliders"></i>
-	             </li>
-
-	             <li data-color="#34495e">
-	                <div>
-	                    <h3>Slide #4</h3>
-	                    <span>Sub-title #4</span>
-	                </div>
-	                <i class="fa fa-code"></i>
-	             </li>
-
-	             <li data-color="#e74c3c">
-	                <div>
-	                    <h3>Slide #5</h3>
-	                    <span>Sub-title #5</span>
-	                </div>
-	                <i class="fa fa-microphone-slash"></i>
-	             </li>
-
-
-	          </ul>
-
-	           <!--controls-->
-	          <div class="btns" id="next"><i class="fa fa-arrow-right"></i></div>
-	          <div class="btns" id="previous"><i class="fa fa-arrow-left"></i></div>
-	          <div id="counter"></div>
-
-	          <div id="pagination-wrap">
-	            <ul>
-	            </ul>
-	          </div>
-	          <!--controls-->
-
-	      </div>
 			</div>
 
 		</div>
@@ -766,7 +703,6 @@
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/timeCounter.js"></script>
-<script  src="js/index.js"></script>
 
 <script type="text/javascript">
   var Time = "3/01/2019 15:00:00";
