Added rest of sponsors. Removed nav from mobile. Fixed header nav collapse bar

--- a/index.html
+++ b/index.html
@@ -86,11 +86,6 @@
 
 		<!-- navbar header -->
 		<div class="navbar-header">
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
 			<a href="#intro" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
 		</div>
 
@@ -632,7 +627,48 @@
 		</div>
 		<div class="row">
 			<h3>{ Partners & Supporters }</h3>
-
+			<div class="row partners">
+				<div class="image-container">
+					<img src="images/mlh.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/wolfram-logo.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/sketch.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/logo_jetbrains.png" />
+				</div>
+			</div>
+			<div class="row partners">
+				<div class="image-container">
+					<img src="images/sponsor_techdomains.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/cs.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/engineering.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/coasb.png" />
+				</div>
+			</div>
+			<div class="row partners">
+				<div class="image-container">
+					<img src="images/IT.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/coer.png" />
+				</div>
+				<div class="image-container">
+					<img src="images/placeholder.svg" />
+				</div>
+				<div class="image-container">
+					<img src="images/placeholder.svg" />
+				</div>
+			</div>
 		</div>
 
 	</div>
