Schedule coming soon...

--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
 				</div>
 			</div>
 
-			<div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.9s">
-				<!-- Nav tabs -->
+			<!-- <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.9s">
+				nav tabs
 				<ul class="nav nav-tabs" role="tablist">
 					<li class="active"><a href="#fday" aria-controls="fday" role="tab" data-toggle="tab">FRIDAY (3/1)</a></li>
 					<li><a href="#sday" aria-controls="sday" role="tab" data-toggle="tab">SATURDAY (3/2)</a></li>
 					<li><a href="#tday" aria-controls="tday" role="tab" data-toggle="tab">SUNDAY (3/3)</a></li>
 				</ul>
-				<!-- tab panes -->
+				 tab panes
 				<div class="tab-content">
 
 					<div role="tabpanel" class="tab-pane active" id="fday">
@@ -447,7 +447,9 @@
 
 				</div>
 
-		</div>
+		</div> -->
+
+		<h3 class="text-center">Coming Soon...</h3>
 	</div>
 </section>
 
