Header logo only appears when scrolling down

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 		<!-- navbar header -->
 		<div class="navbar-header">
-			<a href="#intro" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
+			<a href="#intro" class="navbar-brand smoothScroll shown"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
 		</div>
 
 	</div>
